[package]
name = "gamejam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies] #                                 v remove before building standalone binary (or if on windows)
bevy = { version = "0.9", features = ["wayland", "dynamic"] }
bevy_rapier2d = "0.19.0"
bevy_ecs_ldtk = { version = "0.5", features = ["atlas"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
